Corrige chamadas a getFirst() nos testes para usar get(0)